[BUGFIX] Align fields in FormEngine properly
Some fields are not aligned properly.

Resolves: #63120
Releases: master
Reviewed-on: http://review.typo3.org/34426
Tested-by: Anja Leichsenring <aleichsenring@ab-softlab.de>
Tested-by: Andreas Fernandez <a.fernandez@scripting-base.de>
Tested-by: Wouter Wolters <typo3@wouterwolters.nl>

--- a/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_element_tceforms.less
+++ b/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_element_tceforms.less
@@ -668,7 +668,6 @@ table#typo3-altdoc-header input,
 .t3-tceforms-input-wrapper-datetime,
 .t3-tceforms-input-wrapper-datetime-hover {
 	display: block;
-	float: left;
 	position: relative;
 }
 
